--- a/TechSummary.csproj
+++ b/TechSummary.csproj
@@ -20,9 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Entites\" />
+    <Folder Include="DTOs\LoginDTO\Request\" />
+    <Folder Include="Models\" />
     <Folder Include="Helper\" />
+    <Folder Include="Interface\" />
+    <Folder Include="Service\" />
   </ItemGroup>
 
 </Project>
