--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  {
+    "ConnectionStrings": {
+      "TechSummaryDatabase": "Server=YOUR_SERVER;Database=TechSummaryDb;Trusted_Connection=True;"
+    }
+  },
+
   "AllowedHosts": "*"
 }
