--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /.gitignore
 /Migrations/20250626012831_AddStudentBirthDate.cs
 /Migrations/20250626012831_AddStudentBirthDate.Designer.cs
+/Service/AuthService.cs
