Category Controller APIs: Req.01 Get all categories Req.02 Get languages Req.03 Get topics Req.04 Get topic details Req.05 Get all contents Req.06 Get Resources :( (Videos, pdf, External Resources ))

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 /Migrations/20250626012831_AddStudentBirthDate.cs
 /Migrations/20250626012831_AddStudentBirthDate.Designer.cs
 /Service/AuthService.cs
+/Service
